Basic caching for Base64 -> even quicker. + made certain patches ignore subrequests, as they are unnecessary.